app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: "Poppins", sans-serif;
  --font-serif: "Playfair", serif;
  --font-mono: monospace;
  --font-pixelify: "Pixelify Sans", mono;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-serif);
  font-size: var(--text-lg);
}

a {
  color: var(--color-orange-500);
  text-decoration: underline;
}

h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
  text-decoration: none;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-sans)
}

h1 {
  font-size: var(--text-4xl);
  line-height: 1;
}

@media(min-width: 768px) {
  h1 {
    font-size: var(--text-5xl)
  }
}

@media(min-width: 1024px) {
  h1 {
    font-size: var(--text-6xl)
  }
}

@media(min-width: 1280px) {
  h1 {
    font-size: var(--text-7xl)
  }
}

h2 {
  font-size: var(--text-3xl)
}

@media(min-width: 768px) {
  h2 {
    font-size: var(--text-4xl)
  }
}

@media(min-width: 1024px) {
  h2 {
    font-size: var(--text-5xl)
  }
}

#about p {
  color: var(--color-zinc-400);
}

#format-grid {
  
}

